--- a/src/about.html
+++ b/src/about.html
@@ -11,10 +11,10 @@
 <body>
     <div class="grid-container">    
         <header class="about-page-header">
-            <img src="images/avatar.jpg" alt="Moti Leggese Avatar" id="avatar_image">
+            <img src="images/avatar.jpg" alt="Moti Leggese Avatar" class="about-page-header__avatar">
             
-            <nav>
-                <ul>
+            <nav class="about-page-header__nav">
+                <ul class="nav-list">
                     <li><a href="home.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About</a></li>
                     <li><a href="skills.html" class="nav-link">Skills</a></li>
@@ -25,22 +25,22 @@
         </header>
 
         <main class="grid-container">
-            <introduction  class="grid-item">
+            <section class="introduction grid-item">
                 <h2>Introduction</h2>
-                <p>
+                <p class="introduction__text">
                     Welcome to my digital space! I'm Moti Leggese, a passionate third-year software engineering student on a journey to explore the vast world of technology.
                 </p>
-            </introduction>
+            </section>
     
-            <background id="section-background" class="grid-item">
+            <section class="background grid-item">
                 <h2>Background</h2>
-                <p>
+                <p class="background__text">
                     My educational journey began at Lideta Catholic Cathedral School, where I spent 11 formative years progressing through elementary, middle, and high school. After successfully completing my high school education, I embarked on my current path of pursuing a degree in software engineering.
                 </p>
-                <p>
+                <p class="background__text">
                     These years of academic exploration laid the foundation for my passion for learning and set the stage for my continued journey in the field of software engineering.
                 </p>
-            </background>
+            </section>
         </main>
 
         <footer>
