--- a/src/home.html
+++ b/src/home.html
@@ -13,39 +13,39 @@
         <img
           src="images/avatar.jpg"
           alt="Moti Leggese Avatar"
-          id="avatar_image"
+          class="home-page-header__avatar"
         />
-        <h1 class="welcome-text">Welcome to Moti Leggese's Website</h1>
+        <h1 class="home-page-header__welcome-text">Welcome to Moti Leggese's Website</h1>
         
-        <nav>
-          <ul>
-            <li><a href="home.html" class="nav-link">Home</a></li>
-            <li><a href="about.html" class="nav-link">About</a></li>
-            <li><a href="skills.html" class="nav-link">Skills</a></li>
+        <nav class="home-page-header__nav">
+          <ul class="home-page-header__nav-list">
+            <li><a href="home.html" class="home-page-header__nav-link">Home</a></li>
+            <li><a href="about.html" class="home-page-header__nav-link">About</a></li>
+            <li><a href="skills.html" class="home-page-header__nav-link">Skills</a></li>
             <li>
-              <a href="volunteer_activity.html" class="nav-link"
+              <a href="volunteer_activity.html" class="home-page-header__nav-link"
                 >Volunteer Activity</a
               >
             </li>
-            <li><a href="contact.html" class="nav-link">Contact</a></li>
+            <li><a href="contact.html" class="home-page-header__nav-link">Contact</a></li>
           </ul>
         </nav>
       </header>
 
-      <about-me>
-        <h2>About Me</h2>
-        <img src="images/about.jpg" alt="About Me Image" />
-        <p>
+      <about-me class="about-me">
+        <h2 class="about-me__heading">About Me</h2>
+        <img src="images/about.jpg" alt="About Me Image" class="about-me__image" />
+        <p class="about-me__text">
           Welcome! I'm Moti Leggese, a passionate third-year software
           engineering student. Explore my website to learn more about my skills,
           projects, and contributions.
         </p>
       </about-me>
 
-      <featured-projects>
-        <h2>Featured Projects</h2>
-        <img src="images/featured.jpg" alt="Featured Projects" />
-        <p>
+      <featured-projects class="featured-projects">
+        <h2 class="featured-projects__heading">Featured Projects</h2>
+        <img src="images/featured.jpg" alt="Featured Projects" class="featured-projects__image" />
+        <p class="featured-projects__text">
           Check out some of my latest projects, showcasing my expertise in
           software development. Each project reflects my commitment to
           innovation and excellence.
@@ -53,28 +53,28 @@
         <a
           href="https://github.com/motilegge/UGR-5389-14.git"
           target="_blank"
-          class="grid-item link"
+          class="featured-projects__link"
           >Check my Projects on GitHub</a
         >
       </featured-projects>
 
-      <skills-and-expertice>
-        <h2>Skills and Expertise</h2>
-        <img src="images/core_skills.jpg" alt="Core Skills" />
-        <p>
-          Explore my <a href="skills.html" class="link">skills</a> and expertise
+      <skills-and-expertise class="skills-and-expertise">
+        <h2 class="skills-and-expertise__heading">Skills and Expertise</h2>
+        <img src="images/core_skills.jpg" alt="Core Skills" class="skills-and-expertise__image" />
+        <p class="skills-and-expertise__text">
+          Explore my <a href="skills.html" class="skills-and-expertise__link">skills</a> and expertise
           in software engineering. From web development to database management,
           I bring a diverse set of capabilities to the table. Check out my
           projects and see how I apply my skills to real-world challenges.
         </p>
-        <p>
-          Visit my <a href="skills.html" class="link">Skills page</a> for a
+        <p class="skills-and-expertise__additional-text">
+          Visit my <a href="skills.html" class="skills-and-expertise__link">Skills page</a> for a
           detailed breakdown of the technologies and tools I work with.
         </p>
-      </skills-and-expertice>
+      </skills-and-expertise>
     </div>
   </body>
   <footer class="footer">
-    <p id="footer note">&copy; 2023 Moti Leggese</p>
+    <p id="footer-note">&copy; 2023 Moti Leggese</p>
   </footer>
 </html>
