--- a/src/about.html
+++ b/src/about.html
@@ -1,45 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
+
 <body>
     <header>
-        <h1>About Moti Leggese</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
-        <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="volunteer_activity.html">Volunteer Activity</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+        <nav class="navbar is-warning" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="home.html">
+                    <img src="images/avatar.jpg" alt="Avatar Image" width="28" height="28">
+                </a>
+
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
+
+            <div id="navbarBasicExample" class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item" href="home.html">Home</a>
+                    <a class="navbar-item" href="about.html">About</a>
+                    <a class="navbar-item" href="skills.html">Skills</a>
+                    <a class="navbar-item" href="volunteer_activity.html">Volunteer Activity</a>
+                    <a class="navbar-item" href="contact.html">Contact</a>
+                </div>
+            </div>
         </nav>
     </header>
 
-    <section>
-        <h2>Introduction</h2>
-        <img src="images/intro.jpg" alt="Moti Leggese">
-        <p>
-            Hello! I'm Moti Leggese, a third-year software engineering student on a journey to explore the vast world of technology. Welcome to my digital space, where I share my enthusiasm for coding and problem-solving.
-        </p>
+    <section class="section is-flex-desktop is-justify-content-flex-end">
+        <div class="container">
+            <h1 class="title">About Moti Leggese</h1>
+        </div>
     </section>
 
-    <section>
-        <h2>Background</h2>
-        <p>
-            My educational journey took root in Lideta Catholic Cathedral School, where I spent 11 formative years progressing through elementary, middle, and high school. I successfully completed my high school education and graduated in 2022.
-            </p>
-            <img src="images/my_photo.jpg" alt="Moti Leggese">
-            <p> These years of academic exploration laid the foundation for my passion for learning and set the stage for my pursuit of a degree in software engineering.
-        </p>
+    <section class="section is-flex-desktop is-justify-content-flex-end">
+        <div class="container">
+            <h2 class="title">Introduction</h2>
+            <div class="columns">
+                <div class="column is-one-third">
+                    <figure class="image">
+                        <img src="images/intro.jpg" alt="Moti Leggese">
+                    </figure>
+                </div>
+                <div class="column">
+                    <p>
+                        Hello! I'm Moti Leggese, a third-year software engineering student on a journey to explore the vast world of technology. Welcome to my digital space, where I share my enthusiasm for coding and problem-solving.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <footer>
-        <p>&copy; 2023 Moti Leggese</p>
+    <section class="section is-flex-desktop is-justify-content-flex-end">
+        <div class="container">
+            <h2 class="title">Background</h2>
+            <div class="columns">
+                <div class="column is-one-third">
+                    <figure class="image">
+                        <img src="images/my_photo.jpg" alt="Moti Leggese">
+                    </figure>
+                </div>
+                <div class="column">
+                    <p>
+                        My educational journey took root in Lideta Catholic Cathedral School, where I spent 11 formative years progressing through elementary, middle, and high school. I successfully completed my high school education and graduated in 2022.
+                    </p>
+                    <p>
+                        These years of academic exploration laid the foundation for my passion for learning and set the stage for my pursuit of a degree in software engineering.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p>&copy; 2023 Moti Leggese</p>
+        </div>
     </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const $navbarBurger = document.querySelector('.navbar-burger');
+            const $navbarMenu = document.querySelector('.navbar-menu');
+
+            if ($navbarBurger && $navbarMenu) {
+                $navbarBurger.addEventListener('click', () => {
+                    $navbarBurger.classList.toggle('is-active');
+                    $navbarMenu.classList.toggle('is-active');
+                });
+            }
+        });
+    </script>
 </body>
+
 </html>
