--- a/src/home.html
+++ b/src/home.html
@@ -1,90 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
+
 <body>
     <header>
-        <h1>Welcome to Moti Leggese's Website</h1>
-        <img src="images/avatar.jpg" alt="Moti Leggese Avatar">
-        <img src="images/home.jpg" alt="homepage Background">
-        <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="volunteer_activity.html">Volunteer Activity</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+        <nav class="navbar is-warning" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="home.html">
+                    <img src="images/avatar.jpg" alt="Avatar Image" width="28" height="28">
+                </a>
+
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
+
+            <div id="navbarBasicExample" class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item" href="home.html">Home</a>
+                    <a class="navbar-item" href="about.html">About</a>
+                    <a class="navbar-item" href="skills.html">Skills</a>
+                    <a class="navbar-item" href="volunteer_activity.html">Volunteer Activity</a>
+                    <a class="navbar-item" href="contact.html">Contact</a>
+                </div>
+            </div>
         </nav>
     </header>
 
-    <section>
-        <h2>About Me</h2>
-        <img src="images/about.jpg" alt="About Me Image">
-        <p>
-            Welcome! I'm Moti Leggese, a passionate third-year software engineering student. Explore my website to learn more about my skills, projects, and contributions.
-        </p>
+    <section class="section">
+        <div class="container">
+            <h1 class="title">Welcome to Moti Leggese's Website</h1>
+        </div>
     </section>
 
-    <section>
-        <h2>Featured Projects</h2>
-        <img src="images/featured.jpg" alt="Featured projetcs">
-        <p>
-            Check out some of my latest projects, showcasing my expertise in software development. Each project reflects my commitment to innovation and excellence.
-        </p>
-        <a href="https://github.com/motilegge/UGR-5389-14.git" target="_blank">Check my Projects on GitHub</a>
+    <section class="section is-flex-desktop is-justify-content-flex-end">
+        <div class="container">
+            <h2 class="title">About Me</h2>
+            <div class="columns">
+                <div class="column is-one-third">
+                    <figure class="image">
+                        <img src="images/about.jpg" alt="About Me Image">
+                    </figure>
+                </div>
+                <div class="column">
+                    <p>
+                        Welcome! I'm Moti Leggese, a passionate third-year software engineering student. Explore my website to learn more about my skills, projects, and contributions.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section>
-        <h2>Skills and Expertise</h2>
-        <img src="images/core_skills.jpg" alt="core skill">
-        <p>
-            Explore my skills and expertise in software engineering. From web development to database management, I bring a diverse set of capabilities to the table. Check out my projects and see how I apply my skills to real-world challenges.
-        </p>
-        <p>
-            Visit my <a href="skills.html">Skills page</a> for a detailed breakdown of the technologies and tools I work with.
-        </p>
+    <section class="section is-flex-desktop is-justify-content-flex-end">
+        <div class="container">
+            <h2 class="title">Featured Projects</h2>
+            <div class="columns">
+                <div class="column is-one-third">
+                    <figure class="image">
+                        <img src="images/featured.jpg" alt="Featured Projects">
+                    </figure>
+                </div>
+                <div class="column">
+                    <p>
+                        Check out some of my latest projects, showcasing my expertise in software development. Each project reflects my commitment to innovation and excellence.
+                    </p>
+                    <a href="https://github.com/motilegge/UGR-5389-14.git" target="_blank">Check my Projects on GitHub</a>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section>
-        <h2>Volunteer Activity and Contributions</h2>
-        <img src="images/volunteer.jpg" alt="volunteer_activity">
-        <p>
-            Discover my commitment to making a positive impact beyond the world of software. In the <a href="volunteer_activity.html">Volunteer Activity</a> section, I share experiences in contributing to positive change through hands-on projects and events.
-        </p>
-        <p>
-            Learn about my efforts in providing emotional care and making meaningful contributions to communities in need. Read about specific projects and initiatives that reflect my dedication to social responsibility.
-        </p>
+    <section class="section is-flex-desktop is-justify-content-flex-end">
+        <div class="container">
+            <h2 class="title">Skills and Expertise</h2>
+            <div class="columns">
+                <div class="column is-one-third">
+                    <figure class="image">
+                        <img src="images/core_skills.jpg" alt="Core Skills Image">
+                    </figure>
+                </div>
+                <div class="column">
+                    <p>
+                        Explore my skills and expertise in software engineering. From web development to database management, I bring a diverse set of capabilities to the table. Check out my projects and see how I apply my skills to real-world challenges.
+                    </p>
+                    <p>
+                        Visit my <a href="skills.html">Skills page</a> for a detailed breakdown of the technologies and tools I work with.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section>
-        <h2>Projest Pulse</h2>
-        <img src="images/pulse.jpg" alt="pulse">
-        <p>
-            Stay updated with my latest news and announcements. Whether it's a new project, collaboration, or an exciting development in the tech world, you'll find it here.
-        </p>
-        <ul>
-            <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank">Exciting News on X Platform</a></li>
-            <li><a href="https://t.me/motiition" target="_blank">Join me on Telegram for Live Updates</a></li>
-        </ul>
+    <section class="section is-flex-desktop is-justify-content-flex-end">
+        <div class="container">
+            <h2 class="title">Volunteer Activity and Contributions</h2>
+            <div class="columns">
+                <div class="column is-one-third">
+                    <figure class="image">
+                        <img src="images/volunteer.jpg" alt="Volunteer Activity Image">
+                    </figure>
+                </div>
+                <div class="column">
+                    <p>
+                        Discover my commitment to making a positive impact beyond the world of software. In the <a href="volunteer_activity.html">Volunteer Activity</a> section, I share experiences in contributing to positive change through hands-on projects and events.
+                    </p>
+                    <p>
+                        Learn about my efforts in providing emotional care and making meaningful contributions to communities in need. Read about specific projects and initiatives that reflect my dedication to social responsibility.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section>
-        <h2>Get in Touch</h2>
-        <p>
-            Interested in collaborating or learning more about my work? Feel free to reach out! Visit the <a href="contact.html">Contact page</a> for direct contact information, my address, and social media links.
-        </p>
-        <p>
-            Whether you have a project in mind or just want to connect, I'm always open to new opportunities and collaborations.
-        </p>
-        <a href="contact.html">Contact Me</a>
+    <section class="section is-flex-desktop is-justify-content-flex-end">
+        <div class="container">
+            <h2 class="title">Project Pulse</h2>
+            <div class="columns">
+                <div class="column is-one-third">
+                    <figure class="image">
+                        <img src="images/pulse.jpg" alt="Project Pulse Image">
+                    </figure>
+                </div>
+                <div class="column">
+                    <p>
+                        Stay updated with my latest news and announcements. Whether it's a new project, collaboration, or an exciting development in the tech world, you'll find it here.
+                    </p>
+                    <ul>
+                        <li><a href="https://x.com/Moti24140143?t=_pUUa3pqlhg19NHuSnhmpA&s=35" target="_blank">Exciting News on X Platform</a></li>
+                        <li><a href="https://t.me/motiition" target="_blank">Join me on Telegram for Live Updates</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <footer>
-        <p>&copy; 2023 Moti Leggese</p>
+    <section class="section is-flex-desktop is-justify-content-flex-end">
+        <div class="container">
+            <h2 class="title">Get in Touch</h2>
+            <div class="columns">
+                
+                <div class="column">
+                    <p>
+                        Interested in collaborating or learning more about my work? Feel free to reach out! Visit the <a href="contact.html">Contact page</a> for direct contact information, my address, and social media links.
+                    </p>
+                    <p>
+                        Whether you have a project in mind or just want to connect, I'm always open to new opportunities and collaborations.
+                    </p>
+                    <a href="contact.html">Contact Me</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p>&copy; 2023 Moti Leggese</p>
+        </div>
     </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const $navbarBurger = document.querySelector('.navbar-burger');
+            const $navbarMenu = document.querySelector('.navbar-menu');
+
+            if ($navbarBurger && $navbarMenu) {
+                $navbarBurger.addEventListener('click', () => {
+                    $navbarBurger.classList.toggle('is-active');
+                    $navbarMenu.classList.toggle('is-active');
+                });
+            }
+        });
+    </script>
 </body>
+
 </html>
