added js and cleaned the html and css

--- a/src/volunteer_activity.html
+++ b/src/volunteer_activity.html
@@ -27,7 +27,7 @@
         <main class="grid-container">
             <contribution id="contribution" class="contribution grid-item">
                 <h2 class="contribution__heading">Contribution</h2>
-                <video src="videos/what_i_have_done.mp4" controls class="contribution__video"></video>
+                <video src="videos/what i have done.mp4" controls class="contribution__video"></video>
                 <p class="contribution__text">I actively contribute to positive change through hands-on projects and impactful
                     events. My efforts are quantifiable, ranging from direct assistance to individuals and successful
                     project implementation. Whether raising funds for crucial causes or leading initiatives, my commitment
@@ -61,6 +61,7 @@
         <footer class="grid-container">
             <p class="footer__note">&copy; 2023 Moti Leggese</p>
         </footer>
+        <script src="js/script.js"></script>
     </div>
 </body>
 
