--- a/src/contact.html
+++ b/src/contact.html
@@ -26,7 +26,7 @@
         </header>
 
         <main class="grid-container">
-            <contact-form class="contact-form">
+            <contact-form class="contact-form grid-item">
                 <h2 class="contact-form__heading">Contact Form</h2>
                 <form action="#" method="post" class="contact-form__form">
                     <label for="fullName" class="contact-form__label">Full Name:</label>
@@ -45,7 +45,7 @@
                 </form>
             </contact-form  >
         
-            <direct-contact class="direct-contact">
+            <direct-contact class="direct-contact grid-item">
                 <h2 class="direct-contact__heading">Direct Contact</h2>
                 <p class="direct-contact__text">
                     Feel free to reach out to me directly via email or phone. I'm always open to new opportunities and
@@ -58,7 +58,7 @@
             </direct-contact>
         
             <!-- Address Section -->
-            <address class="address">
+            <address class="address grid-item">
                 <h2 class="address__heading">Address</h2>
                 <p class="address__text">
                     If you prefer traditional mail or want to drop by, here's my address:
@@ -86,6 +86,7 @@
         <footer class="footer">
             <p class="footer__note">&copy; 2023 Moti Leggese</p>
         </footer>
+        <script src="js/script.js"></script>
     </div>
 </body>
 
