--- a/src/skills.html
+++ b/src/skills.html
@@ -25,7 +25,7 @@
             </nav>
         </header>
         <main class="grid-container">
-            <applications id="applications" class="applications">
+            <applications id="applications" class="applications grid-item">
                 <h2 class="applications__heading">Applications</h2>
                 <img src="images/skills.jpg" alt="Skills Showcase Image" class="applications__image" />
                 <p class="applications__text">
@@ -97,6 +97,7 @@
         <footer class="footer">
             <p class="footer__note">&copy; 2023 Moti Leggese</p>
         </footer>
+        <script src="js/script.js"></script>
     </div>
 </body>
 
